<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_theme"
            android:icon="@drawable/theme"
            android:title="@string/menu_theme" />
        <item
            android:id="@+id/nav_menu_reset"
            android:icon="@drawable/recomend"
            android:title="@string/menu_reset" />
        <item
            android:id="@+id/nav_menu_export"
            android:icon="@drawable/share"
            android:title="@string/menu_export" />
        <item
            android:id="@+id/nav_menu_profile_import"
            android:icon="@drawable/export"
            android:title="@string/menu_profile_import" />
        <item
            android:id="@+id/nav_menu_profile_export"
            android:icon="@drawable/share"
            android:title="@string/menu_profile_export" />
    </group>

    <item android:title="@string/menu_other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_menu_app_lists"
                    android:icon="@drawable/hooklist"
                    android:title="@string/menu_app_lists" />
                <item
                    android:id="@+id/nav_menu_setting"
                    android:icon="@drawable/setting"
                    android:title="@string/menu_setting" />
                <item
                    android:id="@+id/nav_menu_help"
                    android:icon="@drawable/help"
                    android:title="@string/menu_help" />
            </group>
        </menu>
    </item>

</menu>
